# LFTC

./: CMakeLists.txt  _parser.c  lexer.c  lexer.h  main.c  parser.c  utils.c
tests/: testlex.c  testparser.c
